--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,19 @@
         "jest/no-focused-tests": "error",
         "jest/no-identical-title": "error",
         "jest/prefer-to-have-length": "warn",
-        "jest/valid-expect": "error"
+        "jest/valid-expect": "error",
+        "require-jsdoc": [2, {
+            "require": {
+                "FunctionDeclaration": true,
+                "MethodDefinition": false,
+                "ClassDeclaration": false
+            }
+        }] 
     }
+    
 
 }
+
+
+            
+        
